// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Traverse#filter should return all matched elements 1`] = `
[
  {
    "attrs": {
      "id": "1f600",
      "shortName": ":grinning:",
      "text": "😀",
    },
    "type": "emoji",
  },
  {
    "attrs": {
      "id": "1f926-200d-2642-fe0f",
      "shortName": ":man_facepalming:",
      "text": "🤦‍♂️",
    },
    "type": "emoji",
  },
  {
    "attrs": {
      "id": "1f1f7-1f1fa",
      "shortName": ":flag_ru:",
      "text": "🇷🇺",
    },
    "type": "emoji",
  },
  {
    "attrs": {
      "id": "wtf",
      "shortName": ":wtf:",
      "text": ":wtf:",
    },
    "type": "emoji",
  },
]
`;

exports[`Traverse#filter should return all matched elements that are satisfying predicate 1`] = `
[
  {
    "attrs": {
      "id": "wtf",
      "shortName": ":wtf:",
      "text": ":wtf:",
    },
    "type": "emoji",
  },
]
`;

exports[`Traverse#filter should return all nodes with links 1`] = `
[
  {
    "marks": [
      {
        "attrs": {
          "href": "https://www.atlassian.com",
        },
        "type": "link",
      },
    ],
    "text": "Hello, World!",
    "type": "text",
  },
]
`;
